crates/batchalign/tests/ml_golden/snapshots/ml_golden__ml_golden__morphotag__golden__morphotag_spa_simple.snap
---
source: crates/batchalign/tests/ml_golden/morphotag/golden.rs
expression: "crate :: ml_golden :: golden :: helpers ::\npin_provenance_timestamps(&results[0].content)"
---
@UTF8
@Begin
@Languages:	spa
@Participants:	PAR Participant
@ID:	spa|test|PAR|||||Participant|||
@Comment:	[fc-ba3 morphotag | build=<build> ; engine=stanza-1.14.0:spa:standard ; lang=spa | <timestamp>]
*PAR:	el gato es grande .
%mor:	det|el-Masc-Def-Art-Sing noun|gato-Masc aux|ser-Fin-Ind-Pres-S3 adj|grande-S1 .
%gra:	1|2|DET 2|4|NSUBJ 3|4|COP 4|0|ROOT 5|4|PUNCT
@End
